# de_analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
docs/: ARCHITECTURE.md
pipelines/: main_pipeline.py
src/: __init__.py  command.py
src/bronze_layer/: README.md  __init__.py  config.py  load.py  utils.py
src/bronze_layer/schemas/: date.sql  encounter.sql  facility.sql  patient.sql  payer.sql  provider.sql  transaction.sql
src/config/: __init__.py
src/gold_layer/: __init__.py
src/silver_layer/: __init__.py
src/utils/: __init__.py  db_load.py  generate_data.py
