[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "de-analytics"
version = "0.1.0"
description = "Medallion architecture data analytics pipeline for healthcare data generation and processing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Data Engineering Team"}
]
keywords = ["data-engineering", "medallion-architecture", "analytics", "etl"]

dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.24.3",
    "pyarrow>=14.0.1",
    "faker>=21.0.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "pymongo>=4.6.0",
    "apache-airflow>=2.7.3",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "pylint>=3.0.3",
    "isort>=5.13.2",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.9",
    "ipython>=8.17.2",
    "requests>=2.31.0",
    "click>=8.1.7",
    "typer>=0.9.0",
    "pre-commit>=3.5.0",
    "pyspark>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "pylint>=3.0.3",
    "isort>=5.13.2",
    "pre-commit>=3.5.0",
]

[project.scripts]
datagen = "src.utils.generate_data:app"
load = "src.command:app"

[project.urls]
Homepage = "https://github.com/yourusername/de_analytics"
Documentation = "https://github.com/yourusername/de_analytics/docs"
Repository = "https://github.com/yourusername/de_analytics.git"

[tool.setuptools]
packages = ["src", "src.bronze_layer", "src.silver_layer", "src.gold_layer", "src.utils", "src.config"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "W0212",  # protected-access
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
